syntax = "proto3";
package common;

import "global_import.proto";
import "common/emote.proto";

option go_package = "card-game-server-prototype/pkg/grpc/commongrpc";
option csharp_namespace = "Joker.Gameplay.Grpc.Services";
option (csharp_assembly) = "Joker.Gameplay.Common";
option (csharp_access) = public;

service EmoteRpcService{
  rpc Subscribe(google.protobuf.Empty) returns(stream EmoteEvent) {}

  rpc SendSticker(StickerRequest) returns (google.protobuf.Empty) {}
  rpc SendPing(EmotePingRequest) returns (google.protobuf.Empty) {}
}
